adjust the colours of 1,2,3,4 to combat contrast issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,10 @@
   --left-highlight-color: #ffffff; /*white*/
   --top-highlight-color: #d6d6d6; /*lighter-grey*/
   --background-color: #a5a5a5; /*light grey*/
-  --one-color: #0e6b0a;
+  --one-color: #00422E;
   --two-color: #131191;
-  --three-color: #880f6e;
-  --four-color: #97400e;
+  --three-color: #6E0C59;
+  --four-color: #5C3100;
 }
 
 /* Global styles */
